# crewai-university-research

./: .env.example  LICENSE  README.md  bruno-universities-ollama_v2.py  pyproject.toml
app/: main.py
app/crew/: agents.py  models.py  tasks.py  tools.py  utils.py
data/: final_report.md  partial_report_Karlsruhe-Germany.md  partial_report_Leuven-Belgium.md  partial_report_Moscow-Russia.md  partial_report_Munich-Germany.md  partial_report_Paris-France.md  partial_report_Vienna-Austria.md
data/_old-results/: Cambridge-UnitedKingdom_fees.txt  Cambridge-UnitedKingdom_living_costs.txt  Cambridge-UnitedKingdom_relevance.txt  Cambridge-UnitedKingdom_report.md  Delft-Netherlands_fees.txt  Delft-Netherlands_relevance.txt  Delft-Netherlands_report.md  Karlsruhe-Germany_living_costs.txt  Karlsruhe-Germany_testimonies.txt  KongensLyngby-Denmark_all_details.txt  KongensLyngby-Denmark_fees.txt  KongensLyngby-Denmark_living_costs.txt  KongensLyngby-Denmark_report.md  KongensLyngby-Denmark_testimonies.txt  Lausanne-Switzerland_all_details.txt  Lausanne-Switzerland_fees.txt  Lausanne-Switzerland_relevance.txt  Lausanne-Switzerland_report.md  Lausanne-Switzerland_testimonies.txt  Leuven-Belgium_all_details.txt  Leuven-Belgium_living_costs.txt  Leuven-Belgium_testimonies.txt  London-UnitedKingdom_all_details.txt  London-UnitedKingdom_fees.txt  London-UnitedKingdom_living_costs.txt  London-UnitedKingdom_report.md  London-UnitedKingdom_testimonies.txt  Manchester-UnitedKingdom_fees.txt  Manchester-UnitedKingdom_living_costs.txt  Manchester-UnitedKingdom_report.md  Moscow-Russia_fees.txt  (+15 more)
(+38 files in other folders)
